...
    val selectedIcon: ImageVector,
    val route: String
)

val bottomNavItems = listOf(
    BottomNavItem("Home",     Icons.Outlined.Home,                       Icons.Filled.Home,                       Screen.Home.route),
    BottomNavItem("Benefits", Icons.Outlined.CardGiftcard,               Icons.Filled.CardGiftcard,               Screen.Benefits.route),
    BottomNavItem("Transfer", Icons.AutoMirrored.Outlined.Send,          Icons.AutoMirrored.Filled.Send,          Screen.Pay.route),
    BottomNavItem("Invest",   Icons.AutoMirrored.Outlined.TrendingUp,    Icons.AutoMirrored.Filled.TrendingUp,    Screen.Stocks.route),
    BottomNavItem("All",      Icons.Outlined.GridView,                   Icons.Filled.GridView,                   Screen.Entire.route),
)

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun ItundaNavGraph() {
    val navController   = rememberNavController()
...
